Fix spacing in Latest Index section

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ a {
 
 .single-index {
   background-color: #fff;
+  max-width: 23%;
 }
 
 .categories {
